2011-04-20  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* fatal.h (tino_pvfatal): if tino_exit_default_code is not set,
	then return -2 (as before), else tino_exit_default_code.

	* ex.h (TINO_EXIT_DEFAULT_CODE): added

2011-04-12  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* log.h (tino_log_debug_match): et al. added, this here is not yet
	ready to be used.

	* sock.h (tino_sock_corkE, tino_sock_corkA): added

	* put.h (tino_put_ansi_if): added

2011-03-06  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* scale.h (tino_scale_number_helper): renamed from
	tino_scale_number
	(tino_scale_number): added

	* log.h (tino_log_errO): added
	(tino_log_vprintfO): prefix support added

	* sock.h (tino_sock_nodelayE, tino_sock_nodelayA): added

2011-02-13  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* proc.h (tino_wait_child_status): added

	* file.h (tino_file_pipeE): added

	* sysfix.h (TINO_F_pipe): added

	* signals.h (tino_sigset): added

	* main_getopt.h (tino_main_g0): passing of arg0 added, so program
	can access it's name.

2011-02-11  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* data.h (struct tino_data, tino_data_newO, tino_data_freeA): fix
	GCC 4.4.5 spurious warning bug

2010-10-21  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* proc.h (tino_fork_execE): added to not cache error on the parent
	side.
	(tino_fork_execE): child now returns 127 (like bash) in case of
	fork fails.

	* ex.h (tino_exit_n, tino_vexit_n, tino_vpexit_n): added

2010-06-02  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* io.h (tino_io_flush_write): added

2010-01-25  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* str.h (tino_str_arg): bugfix: similar quotes like '' now work.

	* proc.h (tino_fd_move): debug now corrected

	* sock.h (tino_sock_get_adrnameN): this is better now, but still
	incorrect.  How to get the sockname() of a socketpair() without
	rubbish?

	* debug.h (TINO_DP_str): added

	* strargs.h: added

	* procsock.h: added
