@@ -1,3 +1,7 @@
+2011-05-08  Valentin Hilbig  <tino@firebird.03.softkill.net>
+
+	* slist.h (tino_glist_clear, tino_slist_clear): added
+
 2011-04-20  Valentin Hilbig  <tino@firebird.03.softkill.net>
 
 	* fatal.h (tino_pvfatal): if tino_exit_default_code is not set,
